[docs] clustering notebook [capi] offer include directories [cluster] mini-batch kmeans makes shuffled batching over dataset when calling fit

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -14,3 +14,26 @@
   year={2006},
   institution={Stanford}
 }
+@article{prinz2011markov,
+  title={Markov models of molecular kinetics: Generation and validation},
+  author={Prinz, Jan-Hendrik and Wu, Hao and Sarich, Marco and Keller, Bettina and Senne, Martin and Held, Martin and Chodera, John D and Sch{\"u}tte, Christof and No{\'e}, Frank},
+  journal={The Journal of chemical physics},
+  volume={134},
+  number={17},
+  pages={174105},
+  year={2011},
+  publisher={American Institute of Physics}
+}
+@book{hartigan1975clustering,
+  title={Clustering algorithms},
+  author={Hartigan, John A},
+  year={1975},
+  publisher={John Wiley \& Sons, Inc.}
+}
+@inproceedings{sculley2010web,
+  title={Web-scale k-means clustering},
+  author={Sculley, David},
+  booktitle={Proceedings of the 19th international conference on World wide web},
+  pages={1177--1178},
+  year={2010}
+}
