[docs] tica update

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -37,3 +37,33 @@
   pages={1177--1178},
   year={2010}
 }
+@article{molgedey1994separation,
+  title={Separation of a mixture of independent signals using time delayed correlations},
+  author={Molgedey, Lutz and Schuster, Heinz Georg},
+  journal={Physical review letters},
+  volume={72},
+  number={23},
+  pages={3634},
+  year={1994},
+  publisher={APS}
+}
+@article{perez2013identification,
+  title={Identification of slow molecular order parameters for Markov model construction},
+  author={P{\'e}rez-Hern{\'a}ndez, Guillermo and Paul, Fabian and Giorgino, Toni and De Fabritiis, Gianni and No{\'e}, Frank},
+  journal={The Journal of chemical physics},
+  volume={139},
+  number={1},
+  pages={07B604\_1},
+  year={2013},
+  publisher={American Institute of Physics}
+}
+@article{schwantes2013improvements,
+  title={Improvements in Markov state model construction reveal many non-native interactions in the folding of NTL9},
+  author={Schwantes, Christian R and Pande, Vijay S},
+  journal={Journal of chemical theory and computation},
+  volume={9},
+  number={4},
+  pages={2000--2009},
+  year={2013},
+  publisher={ACS Publications}
+}
