[tica] docs [data/utils] tests and improvements for timeshifted_split

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -67,3 +67,39 @@
   year={2013},
   publisher={ACS Publications}
 }
+@article{wu2016variational,
+  title={Variational approximation of molecular kinetics from short off-equilibrium simulations},
+  author={Wu, Hao and N{\"u}ske, Feliks and Paul, Fabian and Klus, Stefan and Koltai, P{\'e}ter and No{\'e}, Frank},
+  journal={stat},
+  volume={1050},
+  pages={20},
+  year={2016}
+}
+@article{noe2015kinetic,
+  title={Kinetic distance and kinetic maps from molecular dynamics simulation},
+  author={No{\'e}, Frank and Clementi, Cecilia},
+  journal={Journal of chemical theory and computation},
+  volume={11},
+  number={10},
+  pages={5002--5011},
+  year={2015},
+  publisher={ACS Publications}
+}
+@article{noe2016commute,
+  title={Commute maps: Separating slowly mixing molecular configurations for kinetic modeling},
+  author={Noe{\'e}, Frank and Banisch, Ralf and Clementi, Cecilia},
+  journal={Journal of chemical theory and computation},
+  volume={12},
+  number={11},
+  pages={5620--5630},
+  year={2016},
+  publisher={ACS Publications}
+}
+@inproceedings{chan1982updating,
+  title={Updating formulae and a pairwise algorithm for computing sample variances},
+  author={Chan, Tony F and Golub, Gene Howard and LeVeque, Randall J},
+  booktitle={COMPSTAT 1982 5th Symposium held at Toulouse 1982},
+  pages={30--41},
+  year={1982},
+  organization={Springer}
+}
