--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -103,3 +103,13 @@
   year={1982},
   organization={Springer}
 }
+@article{naritomi2011slow,
+  title={Slow dynamics in protein fluctuations revealed by time-structure based independent component analysis: The case of domain motions},
+  author={Naritomi, Yusuke and Fuchigami, Sotaro},
+  journal={The Journal of chemical physics},
+  volume={134},
+  number={6},
+  pages={02B617},
+  year={2011},
+  publisher={American Institute of Physics}
+}
