[tica] docs [data/ellipsoids] new example dataset

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -40,7 +40,7 @@
 @article{molgedey1994separation,
   title={Separation of a mixture of independent signals using time delayed correlations},
   author={Molgedey, Lutz and Schuster, Heinz Georg},
-  journal={Physical review letters},
+  journal={Physical Review Letters},
   volume={72},
   number={23},
   pages={3634},
@@ -58,7 +58,7 @@
   publisher={American Institute of Physics}
 }
 @article{schwantes2013improvements,
-  title={Improvements in Markov state model construction reveal many non-native interactions in the folding of NTL9},
+  title={Improvements in {Markov} state model construction reveal many non-native interactions in the folding of {NTL9}},
   author={Schwantes, Christian R and Pande, Vijay S},
   journal={Journal of chemical theory and computation},
   volume={9},
@@ -112,4 +112,11 @@
   pages={02B617},
   year={2011},
   publisher={American Institute of Physics}
+}
+@book{landau2013quantum,
+  title={Quantum mechanics: non-relativistic theory},
+  author={Landau, Lev Davidovich and Lifshitz, Evgenii Mikhailovich},
+  volume={3},
+  year={2013},
+  publisher={Elsevier}
 }
