--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -554,7 +554,7 @@
    "source": [
     "## Koopman reweighting\n",
     "\n",
-    "If the data that is used for estimation (for the most part) is not in equilibrium, the estimate can become heavily biased in case reversibility is enforced. Koopman reweighting <cite data-cite=\"wu2016variational\">(Wu, 2016)</cite> assigns weights to each frame of the time series so that also off-equilibrium data can be used. In scikit-time, a [Koopman estimator](../api/generated/sktime.covariance.KoopmanEstimator.rst#sktime.covariance.KoopmanEstimator)) is implemented, which learns appropriate weights from data. The corresponding [Koopman model](../api/generated/sktime.covariance.KoopmanModel.rst#sktime.covariance.KoopmanModel) can be used as an argument in TICA's `fit`. \n",
+    "If the data that is used for estimation (for the most part) is not in equilibrium, the estimate can become heavily biased in case reversibility is enforced. Koopman reweighting <cite data-cite=\"wu2016variational\">(Wu, 2016)</cite> assigns weights to each frame of the time series so that also off-equilibrium data can be used. In scikit-time, a [Koopman estimator](../api/generated/sktime.covariance.KoopmanEstimator.rst#sktime.covariance.KoopmanEstimator) is implemented, which learns appropriate weights from data. The corresponding [Koopman model](../api/generated/sktime.covariance.KoopmanModel.rst#sktime.covariance.KoopmanModel) can be used as an argument in TICA's `fit`. \n",
     "\n",
     "This reweighting technique becomes necessary as soon as the available data is not a single long trajectory which equilibrates and then is in an equilibrium state for the rest of the time but rather if many short and at least initially off-equilibrium trajectories are used. "
    ]
