--- a/docs/source/notebooks/tica.ipynb
+++ b/docs/source/notebooks/tica.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "TICA <cite data-cite=\"molgedey1994separation\">(Molgedey, 1994)</cite> is short for Time-lagged Independent Component Analysis (sometimes also time structure-based ICA) and is a linear transformation method that can be used for dimensionality reduction. It was introduced for molecular dynamics in <cite data-cite=\"naritomi2011slow\">(Naritomi, 2011)</cite>, later <cite data-cite=\"perez2013identification\">(Pérez-Hernández, 2013)</cite> and as a method in the pipeline of Markov model construction in <cite data-cite=\"perez2013identification\">(Pérez-Hernández, 2013)</cite> and <cite data-cite=\"schwantes2013improvements\">(Schwantes, 2013)</cite>.\n",
     "\n",
-    "> Due to the linear nature of the method it can help, to first featurize the input data by passing it through nonlinear functions. This could be for example pairwise distances in case the input is based on molecular dynamics data.\n",
+    "> The input for the TICA algorithm is a time-series dataset. Due to the linear nature of the method it can help, to first featurize the input data by passing it through nonlinear functions. This could be for example pairwise distances in case the input is based on molecular dynamics data.\n",
     "\n",
     "When the input data is the result of a Markov process, TICA finds in fact an approximation to the eigenfunctions and eigenvalues of the underlying Markov operator <cite data-cite=\"perez2013identification\">(Pérez-Hernández, 2013)</cite>.\n",
     "\n",
@@ -111,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and the model can be obtained by a call to [fetch_model()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fetch_model) in order to transform / project data."
+    "The model can be obtained by a call to [fetch_model()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fetch_model) in order to transform / project data."
    ]
   },
   {
@@ -654,7 +654,7 @@
    "source": [
     "## Performance, numerical stability, and memory consumption\n",
     "\n",
-    "The implementation of TICA its generalization [VAMP](vamp.ipynb) are based on estimating covariance matrices using the [covariance estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). This estimator makes use of an online algorithm proposed in <cite data-cite=\"chan1982updating\">(Chan, 1982)</cite> so that not the entire data has to be kept in memory. \n",
+    "The implementation of TICA (and its generalization [VAMP](vamp.ipynb)) are based on estimating covariance matrices using the [covariance estimator](../api/generated/sktime.covariance.Covariance.rst#sktime.covariance.Covariance). This estimator makes use of an online algorithm proposed in <cite data-cite=\"chan1982updating\">(Chan, 1982)</cite> so that not the entire data has to be kept in memory. \n",
     "\n",
     "In particular, this means that TICA not only has a [fit()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.fit), but also a [partial_fit()](../api/generated/sktime.decomposition.TICA.rst#sktime.decomposition.TICA.partial_fit)."
    ]
