--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -120,3 +120,23 @@
   year={2013},
   publisher={Elsevier}
 }
+@article{wu2020variational,
+  title={Variational approach for learning Markov processes from time series data},
+  author={Wu, Hao and No{\'e}, Frank},
+  journal={Journal of Nonlinear Science},
+  volume={30},
+  number={1},
+  pages={23--66},
+  year={2020},
+  publisher={Springer}
+}
+@article{scherer2019variational,
+  title={Variational selection of features for molecular kinetics},
+  author={Scherer, Martin K and Husic, Brooke E and Hoffmann, Moritz and Paul, Fabian and Wu, Hao and No{\'e}, Frank},
+  journal={The Journal of chemical physics},
+  volume={150},
+  number={19},
+  pages={194108},
+  year={2019},
+  publisher={AIP Publishing LLC}
+}
