[docs] vamp docs cleanup

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -140,3 +140,13 @@
   year={2019},
   publisher={AIP Publishing LLC}
 }
+@article{koltai2018optimal,
+  title={Optimal data-driven estimation of generalized Markov state models for non-equilibrium dynamics},
+  author={Koltai, P{\'e}ter and Wu, Hao and No{\'e}, Frank and Sch{\"u}tte, Christof},
+  journal={Computation},
+  volume={6},
+  number={1},
+  pages={22},
+  year={2018},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
