[vampdocs] update [docs] general sphinx and theme parameter tweaks

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -140,6 +140,16 @@
   year={2019},
   publisher={AIP Publishing LLC}
 }
+@article{noe2013variational,
+  title={A variational approach to modeling slow processes in stochastic dynamical systems},
+  author={No{\'e}, Frank and Nuske, Feliks},
+  journal={Multiscale Modeling \& Simulation},
+  volume={11},
+  number={2},
+  pages={635--655},
+  year={2013},
+  publisher={SIAM}
+}
 @article{koltai2018optimal,
   title={Optimal data-driven estimation of generalized Markov state models for non-equilibrium dynamics},
   author={Koltai, P{\'e}ter and Wu, Hao and No{\'e}, Frank and Sch{\"u}tte, Christof},
@@ -149,4 +159,14 @@
   pages={22},
   year={2018},
   publisher={Multidisciplinary Digital Publishing Institute}
+}
+@article{mcgibbon2015variational,
+  title={Variational cross-validation of slow dynamical modes in molecular kinetics},
+  author={McGibbon, Robert T and Pande, Vijay S},
+  journal={The Journal of chemical physics},
+  volume={142},
+  number={12},
+  pages={03B621\_1},
+  year={2015},
+  publisher={AIP Publishing LLC}
 }
