[vampdocs and pbfdocs] update

--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -170,3 +170,13 @@
   year={2015},
   publisher={AIP Publishing LLC}
 }
+@article{macklin2013position,
+  title={Position based fluids},
+  author={Macklin, Miles and M{\"u}ller, Matthias},
+  journal={ACM Transactions on Graphics (TOG)},
+  volume={32},
+  number={4},
+  pages={1--12},
+  year={2013},
+  publisher={ACM New York, NY, USA}
+}
