[data/pbf] docs

--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "The [VAMP estimator](../api/generated/sktime.decomposition.VAMP.rst#sktime.decomposition.VAMP) first and foremost solves the following problem:\n",
     "\n",
-    "> Given a basis set $\\chi^\\top = (\\chi_0^\\top, \\chi_1)^\\top$ so that $f = U^\\top \\chi_0$ and $g=V^\\top \\chi_1$, find weights $U,V\\in\\mathbb{R}^{m\\times k}$ so that the resulting linear model $\\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)]$ is optimal.\n",
+    "> Given a basis set $\\chi^\\top = (\\chi_0, \\chi_1)^\\top$ so that $f = U^\\top \\chi_0$ and $g=V^\\top \\chi_1$, find weights $U,V\\in\\mathbb{R}^{m\\times k}$ so that the resulting linear model $\\mathbb{E}[g(x_{t+\\tau})] = K^\\top \\mathbb{E}[f(x_t)]$ is optimal.\n",
     "\n",
     "To this end, (instantaneous and time-lagged) mean-free covariance matrices $C_{00}, C_{0t}, C_{tt}$ with\n",
     "\n",
@@ -407,7 +407,7 @@
    "source": [
     "## Example with position based fluids\n",
     "\n",
-    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/impl/sktime.data.PBF.rst#sktime.data.PBF)."
+    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/sktime.data.pbf.rst#sktime.data.pbf)."
    ]
   },
   {
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation(trajectory[:len(trajectory)//4], stride=30, mode=\"scatter\")\n",
+    "animation = pbf.make_animation(trajectory[:len(trajectory)//4], stride=30, mode=\"scatter\", figsize=(5, 4))\n",
     "from IPython.display import HTML\n",
     "HTML(animation.to_html5_video())"
    ]
@@ -525,7 +525,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation(kde_trajectory[:len(kde_trajectory)//4], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y)\n",
+    "animation = pbf.make_animation(kde_trajectory[:len(kde_trajectory)//4], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(5, 4))\n",
     "HTML(animation.to_html5_video())"
    ]
   },
@@ -579,14 +579,14 @@
     "import numpy as np\n",
     "tau = model.cov.lagtime\n",
     "\n",
-    "n_sing = 2\n",
+    "n_sing = 3\n",
     "\n",
-    "f, axes = plt.subplots(ncols=3, nrows=n_sing, figsize=(n_sing*10, 10))\n",
+    "f, axes = plt.subplots(ncols=3, nrows=n_sing, figsize=(n_sing*10, 14))\n",
     "f.suptitle(\"Lagtime {}, VAMP-E score {:.3f}\".format(tau, model.score(score_method=\"VAMPE\")))\n",
     "for i in range(n_sing):\n",
-    "    axes[i][0].plot(projection_left[:-tau][1600:5000, i], label=\"left\")\n",
-    "    axes[i][0].plot(projection_right[tau:][1600:5000, i], label=\"right\")\n",
-    "    axes[i][0].vlines([i*400 for i in range(1,8)], np.min(projection_left[:, i]), np.max(projection_left[:, i]), linestyles='dotted')\n",
+    "    axes[i][0].plot(np.arange(1600, 5000), projection_left[:-tau][1600:5000, i], label=\"left\")\n",
+    "    axes[i][0].plot(np.arange(1600, 5000), projection_right[tau:][1600:5000, i], label=\"right\")\n",
+    "    axes[i][0].vlines([1600 + i*400 for i in range(1,8)], np.min(projection_left[:, i]), np.max(projection_left[:, i]), linestyles='dotted')\n",
     "    axes[i][0].set_title(f\"VAMP projection component {i+1}\")\n",
     "    axes[i][0].set_xlabel(\"time\")\n",
     "    axes[i][0].legend()\n",
@@ -620,7 +620,9 @@
    "outputs": [],
    "source": [
     "plt.plot(model.singular_values[:10], 'o')\n",
-    "plt.title(\"Dominant 10 singular values\");"
+    "plt.title(\"Dominant 10 singular values\");\n",
+    "plt.xlabel(\"singular value\")\n",
+    "plt.ylabel(\"magnitude\")"
    ]
   },
   {
@@ -640,10 +642,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "forward_full = model.forward(kde_trajectory)\n",
-    "forward_component0 = model.forward(kde_trajectory, component=0)\n",
-    "forward_component1 = model.forward(kde_trajectory, component=1)\n",
-    "forward_component2 = model.forward(kde_trajectory, component=2)"
+    "forward_full = model.forward(kde_trajectory)"
    ]
   },
   {
@@ -659,7 +658,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation([kde_trajectory[:len(kde_trajectory)//4], forward_full[:len(kde_trajectory)//4]], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y)\n",
+    "animation = pbf.make_animation([kde_trajectory[:len(kde_trajectory)//4], \n",
+    "                                forward_full[:len(kde_trajectory)//4]\n",
+    "                               ], stride=30, mode=\"contourf\", \n",
+    "                               n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(10, 4))\n",
     "HTML(animation.to_html5_video())"
    ]
   },
@@ -683,7 +685,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation([kde_trajectory[:len(kde_trajectory)//4], forward_component0[:len(kde_trajectory)//4], forward_component1[:len(kde_trajectory)//4]], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y)\n",
+    "forward_component0 = model.forward(kde_trajectory, component=0)\n",
+    "forward_component1 = model.forward(kde_trajectory, component=1)\n",
+    "forward_component2 = model.forward(kde_trajectory, component=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "animation = pbf.make_animation([kde_trajectory[:len(kde_trajectory)//4], \n",
+    "                                forward_component0[:len(kde_trajectory)//4], \n",
+    "                                forward_component1[:len(kde_trajectory)//4],\n",
+    "                                forward_component2[:len(kde_trajectory)//4]\n",
+    "                               ], stride=30, mode=\"contourf\", \n",
+    "                               n_grid_x=n_grid_x, n_grid_y=n_grid_y, nrows=2, ncols=2, \n",
+    "                               figsize=(10, 8), titles=[\"trajectory\", \"component 0\", \"component 1\", \"component 2\"])\n",
     "HTML(animation.to_html5_video())"
    ]
   }
