[misc] implement review suggestions

--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -414,7 +414,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here, we create a new PBF simulator:"
+    "Here, we create a new PBF simulator with a predefined simulation box and set of initial positions:"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbf = sktime.data.pbf(n_jobs=8)"
+    "pbf_simulator = sktime.data.position_based_fluids(n_jobs=8)"
    ]
   },
   {
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbf.n_particles"
+    "pbf_simulator.n_particles"
    ]
   },
   {
@@ -457,14 +457,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "trajectory = pbf.simulate_oscillatory_force(n_oscillations=40, n_steps=400)"
+    "trajectory = pbf_simulator.simulate_oscillatory_force(n_oscillations=40, n_steps=400)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We visualize the trajectory with a matplotlib animation under a stride of 30:"
+    "We visualize the first quarter of the trajectory with a matplotlib animation under a stride of 30:"
    ]
   },
   {
@@ -473,7 +473,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation(trajectory[:len(trajectory)//4], stride=30, mode=\"scatter\", figsize=(5, 4))\n",
+    "animation = pbf_simulator.make_animation(trajectory[:len(trajectory)//4], stride=30, mode=\"scatter\", figsize=(5, 4))\n",
     "from IPython.display import HTML\n",
     "HTML(animation.to_html5_video())"
    ]
@@ -509,7 +509,7 @@
    "source": [
     "n_grid_x = 20\n",
     "n_grid_y = 10\n",
-    "kde_trajectory = pbf.transform_to_density(trajectory, n_grid_x=n_grid_x, n_grid_y=n_grid_y, n_jobs=8)"
+    "kde_trajectory = pbf_simulator.transform_to_density(trajectory, n_grid_x=n_grid_x, n_grid_y=n_grid_y, n_jobs=8)"
    ]
   },
   {
@@ -525,7 +525,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation(kde_trajectory[:len(kde_trajectory)//4], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(5, 4))\n",
+    "animation = pbf_simulator.make_animation(kde_trajectory[:len(kde_trajectory)//4], stride=30, mode=\"contourf\", \n",
+    "                                         n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(5, 4))\n",
     "HTML(animation.to_html5_video())"
    ]
   },
@@ -581,7 +582,7 @@
     "\n",
     "n_sing = 3\n",
     "\n",
-    "f, axes = plt.subplots(ncols=3, nrows=n_sing, figsize=(n_sing*10, 14))\n",
+    "f, axes = plt.subplots(ncols=3, nrows=n_sing, figsize=(n_sing*5, 13))\n",
     "f.suptitle(\"Lagtime {}, VAMP-E score {:.3f}\".format(tau, model.score(score_method=\"VAMPE\")))\n",
     "for i in range(n_sing):\n",
     "    axes[i][0].plot(np.arange(1600, 5000), projection_left[:-tau][1600:5000, i], label=\"left\")\n",
@@ -601,7 +602,8 @@
     "    im = model.singular_vectors_right[:, i].reshape((n_grid_y, n_grid_x))\n",
     "    cb = ax.imshow(im, origin=\"lower\", cmap=\"bwr\")\n",
     "    f.colorbar(cb, ax=ax)\n",
-    "    ax.set_title(\"right eigenfunction {}\".format(i))"
+    "    ax.set_title(\"right eigenfunction {}\".format(i))\n",
+    "plt.tight_layout();"
    ]
   },
   {
@@ -658,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation([kde_trajectory[:len(kde_trajectory)//4], \n",
+    "animation = pbf_simulator.make_animation([kde_trajectory[:len(kde_trajectory)//4], \n",
     "                                forward_full[:len(kde_trajectory)//4]\n",
     "                               ], stride=30, mode=\"contourf\", \n",
     "                               n_grid_x=n_grid_x, n_grid_y=n_grid_y, figsize=(10, 4))\n",
@@ -672,11 +674,11 @@
     "What becomes clearer in the projection onto single processes is that\n",
     "\n",
     "- the slowest process is associated with a density change from left <-> right\n",
-    "- the second slowest process is associated wtih a density change middle <-> sides\n",
+    "- the second slowest process is associated with a density change middle <-> sides\n",
     "\n",
     "This can also be seen in the plot of the 1-dimensional projection onto a specific component of the whitened space in above plot:\n",
     "\n",
-    "> For the slowest process (component 0) there is a sign change roughly every 800 frames, for the second slowest process (component 1) it is roughly every 400 frames."
+    "> For the slowest process (component 0) there is a sign change roughly every 800 frames, for the second slowest process (component 1) it is roughly every 400 frames. The combination of the four dominant components shows some notion of a flow from left to right and vice versa and is therefore already quite close to the trajectory except for particle splashes."
    ]
   },
   {
@@ -687,7 +689,7 @@
    "source": [
     "forward_component0 = model.forward(kde_trajectory, component=0)\n",
     "forward_component1 = model.forward(kde_trajectory, component=1)\n",
-    "forward_component2 = model.forward(kde_trajectory, component=2)"
+    "forward_component0123 = model.forward(kde_trajectory, component=[0, 1, 2, 3])"
    ]
   },
   {
@@ -696,13 +698,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "animation = pbf.make_animation([kde_trajectory[:len(kde_trajectory)//4], \n",
-    "                                forward_component0[:len(kde_trajectory)//4], \n",
-    "                                forward_component1[:len(kde_trajectory)//4],\n",
-    "                                forward_component2[:len(kde_trajectory)//4]\n",
-    "                               ], stride=30, mode=\"contourf\", \n",
-    "                               n_grid_x=n_grid_x, n_grid_y=n_grid_y, nrows=2, ncols=2, \n",
-    "                               figsize=(10, 8), titles=[\"trajectory\", \"component 0\", \"component 1\", \"component 2\"])\n",
+    "animation = pbf_simulator.make_animation(\n",
+    "    [kde_trajectory[:len(kde_trajectory)//4], forward_component0[:len(kde_trajectory)//4], \n",
+    "     forward_component1[:len(kde_trajectory)//4], forward_component0123[:len(kde_trajectory)//4]\n",
+    "    ], stride=30, mode=\"contourf\", n_grid_x=n_grid_x, n_grid_y=n_grid_y, nrows=2, ncols=2, \n",
+    "    figsize=(10, 8), titles=[\"trajectory\", \"component 0\", \"component 1\", \"dominant components 0, 1, 2, 3\"])\n",
     "HTML(animation.to_html5_video())"
    ]
   }
