fixed typos and a link in vamp notebook [skip ci]

--- a/docs/source/notebooks/vamp.ipynb
+++ b/docs/source/notebooks/vamp.ipynb
@@ -299,9 +299,9 @@
    "source": [
     "While the estimator solves the problem of finding optimal transforms $f$, $g$, and $K$, one of the advantages of using the variational approach is that the models can be scored with respect to the choice of the system's featurization.\n",
     "\n",
-    "This makes it possible to not optimize for transforms given a basis but also for the basis itself. If -hyothetically- infinite data and computational power were avaiable, the best possible basis would be the one that can describe the full operator $\\mathcal{K}_\\tau$. In practice however, often a balance between the modeling/discretization error of approximating $\\mathcal{K}_\\tau$ and the statistical error of fitting the parameters given finite data has to be struck.\n",
+    "This makes it possible to not only optimize for transforms given a basis but also for the basis itself. If -hyothetically- infinite data and computational power were avaiable, the best possible basis would be the one that can describe the full operator $\\mathcal{K}_\\tau$. In practice however, often a balance between the modeling/discretization error of approximating $\\mathcal{K}_\\tau$ and the statistical error of fitting the parameters given finite data has to be struck.\n",
     "\n",
-    "There are three different scores implement in scikit-time:\n",
+    "There are three different scores implemented in scikit-time:\n",
     "\n",
     "1. The VAMP-1 score, evaluating the sum of the singular values $s = \\sum_i\\sigma_i$ <cite data-cite=\"noe2013variational\">(Noé, 2013)</cite> and <cite data-cite=\"mcgibbon2015variational\">(McGibbon, 2015)</cite>:"
    ]
@@ -407,7 +407,7 @@
    "source": [
     "## Example with position based fluids\n",
     "\n",
-    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/sktime.data.pbf.rst#sktime.data.pbf)."
+    "Here we demonstrate a toy dataset created by a position based fluids (PBF) simulator <cite data-cite=\"macklin2013position\">(Macklin, 2013)</cite>. In a 2-dimensional simulation box we place particles which then relax to a resting density. We periodically disturb the equilibrium resting density by applying a force toward the left and right boundary of the simulation box alternatingly. For more details on the dataset, please refer to the example data's [documentation](../api/generated/sktime.data.position_based_fluids.rst#sktime.data.position_based_fluids)."
    ]
   },
   {
@@ -482,7 +482,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the trajectory just contains the x-y coordinates of the particles, it is in $R^{T \\times 2\\cdot \\mathrm{n\\_particles}}$."
+    "Since the trajectory just contains the x-y coordinates of the particles, it is in $\\mathbb{R}^{T \\times 2\\cdot \\mathrm{n\\_particles}}$."
    ]
   },
   {
